# labyrinth_solver

./: .gitignore  .main.cpp.swp  .main_bfs.cpp.swp  CMakeLists.txt  MLthird.cpp  README.md  README.txt  a.out  dfs  example_labyrinth.txt  main.cpp  main.cpp~  main_bfs.cpp  main_bfs.cpp~  main_bi_bfs.cpp  main_dfs.cpp  main_dfs_clean.cpp  main_dfs_parallel.cpp  timing.h
Mazes/: example_labyrinth.txt  maze1.txt  maze4.txt  maze8.txt
